2009-09-14  Brady Eidson  <beidson@apple.com>

        Rubberstamped by Alexey Proskuryakov.

        <rdar://problem/7223068> - Tiger NSURLConnection sometimes doesn't send a credential you told it to.

        * platform/mac-tiger/Skipped:

2009-09-14  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/7047282> Safari crashes at WebCore::RenderMenuList::adjustInnerStyle() + 436

        Test that changes the <select> from a popup to a list inside a mouse event handler.

        * fast/forms/select-change-popup-to-listbox-in-event-handler-expected.txt: Added.
        * fast/forms/select-change-popup-to-listbox-in-event-handler.html: Added.

2009-09-11  Jon Honeycutt  <jhoneycutt@apple.com>

        DRT/test part of
        <rdar://problem/7197644> WebKit should broadcast an MSAA event when
        jumping to a named anchor

        https://bugs.webkit.org/show_bug.cgi?id=28899

        Reviewed by Adam Roben.

        * platform/win/accessibility/scroll-to-anchor-expected.txt: Added.
        * platform/win/accessibility/scroll-to-anchor.html:
        Added. Turns on scrolling start event logging, then jumps to an
        anchor at the bottom of the page.

2009-09-14  Brady Eidson  <beidson@apple.com>

        Reviewed by Alexey Proskuryakov.

        Safari 4 cannot be used to update firmware on Linksys routers.
        <rdar://problem/7174050> and https://bugs.webkit.org/show_bug.cgi?id=29160

        * http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt: Added.
        * http/tests/loading/basic-auth-resend-wrong-credentials.html: Added.
        * http/tests/loading/basic-credentials-sent-automatically-expected.txt: Added.
        * http/tests/loading/basic-credentials-sent-automatically.html: Added.
        * http/tests/loading/resources/basic-auth-testing.php: Added.
        * http/tests/loading/resources/othersubresources: Added.